--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "P2P-network-with-Node.js",
   "version": "1.0.0",
-  "description": "A simple peer-to-peer service",
+  "description": "A simple peer-to-peer WebRTC service with Node.js",
   "main": "src/index.js",
   "engines": {
     "node": "8.1.1",
@@ -10,6 +10,8 @@
   "scripts": {
     "start": "node ./src",
     "dev": "nodemon --exec babel-node --ignore databases/ ./src",
+    "node1": "ADDRESS=localhost HTTP_PORT=5000 P2P_PORT=8080 npm run dev",
+    "node2": "ADDRESS=localhost HTTP_PORT=5001 P2P_PORT=8081 TARGET_PEER=localhost:8080 npm run dev",
     "test": "mocha"
   },
   "jest": {
@@ -27,10 +29,13 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "handlebars": "^4.0.12",
+    "jquery": "^3.3.1",
     "opn": "^5.4.0",
-    "pug": "^2.0.3",
-    "pug-lint": "^2.5.0",
+    "semantic-ui-css": "^2.4.1",
+    "simplewebrtc": "^3.0.2",
     "ws": "^6.1.0"
   }
 }
